# PPPU

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README-CN.md  README-EN.md  README.md  README.zh-CN.md  hello.md  install.sh
doc/development/: CMakeLists.txt  mpx.md  ndarray.md  network.md  opencode-guide.md  serialization.md
doc/reference/: context.md  datatypes.md  mpc.md  ndarray.md  network.md  serialization.md
src/DataStructure/: Smap.cpp  Smap.h
src/config/: config.cpp  config.h
src/context/: context.hpp  value.h  value.hpp  visibility.h
src/context/basic/: basic.h  basic.hpp  factory.h  factory.hpp  fxp.h  fxp.hpp  primitive.h  primitive.hpp  prot_wrapper.h  prot_wrapper.hpp  raw.h  raw.hpp  util.h  util.hpp
src/context/compare/: compare.h  compare.hpp
src/context/math/: div.h  div.hpp  exp.h  exp.hpp  log.h  log.hpp  polynomial.h  polynomial.hpp  pow.h  pow.hpp  round.h  round.hpp  sigmoid.h  sigmoid.hpp  sqrt.h  sqrt.hpp  tools.cpp  tools.h
src/context/shape/: concatenate.h  concatenate.hpp  reduce.h  reduce.hpp  sort.h  sort.hpp  tools.cpp  tools.h
src/datatypes/: Z2k.h  Z2k.hpp  Zp.h  Zp.hpp  concepts.h  eigen.h  fixed_point.h  fixed_point.hpp  int128.h  mpx2k.cpp  mpx2k.h  mpx2k.hpp  mpxp.h  mpxp.hpp
src/example/: context_math.h  utils.cpp  utils.h  utils.hpp
src/example/benchmark/: context_benchmark.cc  run_context_benchmark_2p.sh  run_context_benchmark_3p.sh
src/example/tutorials/: tutorial.cpp  tutorial_1_prepare.cpp  tutorial_2_context.cpp  tutorial_3_mpc.cpp  tutorial_4_network.cpp  tutorial_5_ndarray.cpp  tutorial_6_visibility.cpp  tutorial_7_smap.cpp
src/example/unittest/: context_basic_test.cc  context_compare_test.cc  context_math_test.cc  mpc_semi2k_test.cc  network_test.cc
src/mpc/: preprocessing.hpp  protocol.hpp  random_generator.cpp  random_generator.h
src/mpc/semi2k/: semi2k.hpp
src/ndarray/: array_ref.h  array_ref.hpp  buffer.cpp  buffer.hpp  concatenate.h  concatenate.hpp  concepts.hpp  iterator.hpp  ndarray_ref.h  ndarray_ref.hpp  operations.h  operations.hpp  packbits.cpp  packbits.hpp  serialization.hpp  slice.cpp  slice.hpp  tools.h  tools.hpp  util.cpp  util.hpp
src/network/: bitrate.h  bitrate.hpp  comm_package.cpp  comm_package.h  comm_package.hpp  futures.h  mp_connect.cpp  mp_connect.h  mp_connect.hpp  multi_party_player.cpp  multi_party_player.h  multi_party_player.hpp  network.hpp  playerid.cpp  playerid.h  socket_package.h  statistics.h  two_party_player.h  two_party_player.hpp
src/serialization/: concepts.h  deserializer.h  deserializer_impl.h  exceptions.h  serialization.hpp  serializer.h  serializer_impl.h  stl.h
src/tools/: bit_reference.h  bit_vector.cpp  bit_vector.h  bit_vector.hpp  byte_vector.cpp  byte_vector.h  expr_template.h  float_parse.hpp  math.h  permutation.cpp  permutation.hpp  raw_vector.h  raw_vector.hpp  timer.h
